# dauxplugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/include/: daux_core.hpp  daux_editor.h  daux_export.h  daux_host.h  daux_plugin.h  daux_types.h
Core/include/DAUx/: Core.hpp  DAUx.h
Core/include/DAUx/Abi/: Export.h  Result.h  Types.h  Version.h
Core/include/DAUx/Audio/: AudioBuffer.h  AudioBus.h  ChannelLayout.h  ProcessContext.h  SampleFormat.h
Core/include/DAUx/Automation/: Automation.h  AutomationPoint.h  ParameterChangeQueue.h
Core/include/DAUx/Component/: Component.h  ComponentState.h  Controller.h  ProcessData.h  Processor.h
Core/include/DAUx/Editor/: Editor.h  EditorBounds.h  NativeWindow.h
Core/include/DAUx/Event/: Event.h  EventQueue.h  MidiEvent.h  NoteEvent.h  ParameterEvent.h
Core/include/DAUx/Factory/: PluginClassInfo.h  PluginClassRegistry.h  PluginFactory.h
Core/include/DAUx/Gui/: GuiFramework.h  GuiHost.h  GuiMessage.h  GuiSurface.h  GuiView.h
Core/include/DAUx/Host/: Host.h  HostCallbacks.h  HostEvents.h  HostServices.h
Core/include/DAUx/Parameter/: Parameter.h  ParameterFlags.h  ParameterInfo.h  ParameterValue.h
Core/include/DAUx/Plugin/: Capabilities.h  Category.h  Descriptor.h  EntryPoint.h  Lifecycle.h  Plugin.h
Core/include/DAUx/Program/: Preset.h  Program.h  ProgramList.h
Core/include/DAUx/Runtime/: PluginComponent.hpp  PluginController.hpp  PluginEditor.hpp  PluginFactory.hpp  PluginHost.hpp  PluginInstance.hpp  PluginLoader.hpp  PluginProcessor.hpp  PluginRegistry.hpp
Core/include/DAUx/State/: State.h  StateBlob.h
Core/src/: daux_editor.cpp  daux_host.cpp  daux_plugin.cpp
Core/src/Abi/: Abi.cpp
Core/src/Audio/: AudioBuffer.cpp  AudioBus.cpp
Core/src/Automation/: Automation.cpp
Core/src/Component/: Component.cpp  ComponentState.cpp  Controller.cpp  Processor.cpp
Core/src/Editor/: Editor.cpp
Core/src/Event/: Event.cpp
Core/src/Factory/: PluginClassRegistry.cpp  PluginFactory.cpp
Core/src/Gui/: GuiView.cpp
Core/src/Host/: Host.cpp
Core/src/Parameter/: Parameter.cpp
Core/src/Plugin/: Descriptor.cpp  Lifecycle.cpp  Plugin.cpp
Core/src/Program/: Program.cpp
Core/src/Runtime/: PluginComponent.cpp  PluginController.cpp  PluginEditor.cpp  PluginFactory.cpp  PluginHost.cpp  PluginInstance.cpp  PluginLoader.cpp  PluginProcessor.cpp  PluginRegistry.cpp
Core/src/State/: State.cpp
Docs/: plugin-abi.md  plugin-automation.md  plugin-component-model.md  plugin-factory.md  plugin-gui-framework.md  plugin-sdk-dotnet.md  plugin-sdk-rust.md
Examples/GainCppHeadless/: CMakeLists.txt  gain.cpp
Examples/GainDotnetAvalonia/: manifest.xml
Examples/GainDotnetAvalonia/Daux.Examples.Gain/: Daux.Examples.Gain.csproj  GainEditor.cs  GainEditorWindow.axaml  GainEditorWindow.axaml.cs  GainPlugin.cs
Examples/GainDotnetAvalonia/Editor/: README.md
Examples/GainDotnetAvalonia/Plugin/: gain-dotnet-avalonia.csproj
Examples/GainDotnetAvalonia/Preview/: gain-dotnet-preview.csproj
Examples/GainRustGpui/: Cargo.toml
Examples/GainRustGpui/src/: lib.rs
Host/DauxHost/: CMakeLists.txt
Host/DauxHost/src/: host.hpp  host_runtime.cpp  ipc_server.cpp  main.cpp  plugin_editor.cpp  plugin_loader.cpp
Host/DauxScan/: CMakeLists.txt
Host/DauxScan/src/: main.cpp
Scripts/: build.cmd  build.sh
Wrappers/DotNet/Daux.Plugin/: Daux.Plugin.csproj  DauxPlugin.cs  DauxRuntime.cs  Interop.cs
Wrappers/Rust/: Cargo.toml
Wrappers/Rust/daux-plugin/: Cargo.toml
Wrappers/Rust/daux-plugin-sys/: Cargo.toml
Wrappers/Rust/daux-plugin-sys/src/: lib.rs
Wrappers/Rust/daux-plugin/src/: buffer.rs  export.rs  lib.rs  types.rs
core/include/: daux_editor.h  daux_host.h
core/src/: daux_abi.cpp
docs/: dauxhost-protocol.md
examples/gain-dotnet-avalonia/: manifest.xml
examples/gain-dotnet-avalonia/Daux.Examples.Gain/: App.axaml  App.axaml.cs  AvaloniaRuntime.cs  NativeEmbed.cs
examples/gain-dotnet-avalonia/Plugin/: Entry.cs
examples/gain-dotnet-avalonia/Preview/: Program.cs
examples/gain-rust-gpui/src/: lib.rs
host/dauxhost/src/: plugin_scan.cpp
scripts/: build.cmd
wrappers/dotnet/Daux.Plugin/: Interop.cs
wrappers/rust/: Cargo.toml
wrappers/rust/daux-plugin-sys/src/: lib.rs
wrappers/rust/daux-plugin/src/: lib.rs  types.rs
