[package]
name = "gain-rust-gpui"
version = "0.1.0"
edition = "2021"
description = "Example DAUx gain plugin in Rust (GPUI/DAUx editor scaffold)"
license = "MIT OR Apache-2.0"

[lib]
# cdylib so the OS produces a loadable dynamic library. On Windows this is
# `gain_rust_gpui.dll`; rename/copy it to `*.dauxplug` for the DAUx loader
# (see daux/docs/plugin-sdk-rust.md). DAUxHost --mode=headless can also load
# the .dll directly by path.
crate-type = ["cdylib"]

[dependencies]
daux-plugin = { path = "../../wrappers/rust/daux-plugin" }
